--- a/Gifter/client/src/providers/post.css
+++ b/Gifter/client/src/providers/post.css
@@ -1,10 +1,23 @@
+.main_Container {
+  display: flex;
+  flex-direction: row;
+}
+.form {
+    position: fixed;
+    width: 30%;
+}
+.Post_Scroller {
+    margin-left: 30%;
+    height: 100%;
+    overflow-y: scroll;
+}
 .post__Form__Fields {
   margin-left: 25%;
   display: flex;
   flex-direction: column;
   text-align: left;
   border: 2px solid black;
-  width: 50%;
+  width: 100%;
 }
 
 .input__field {
@@ -17,12 +30,17 @@
   margin: 2vw;
 }
 
+.post_Card {
+    width: 70%;
+    margin-left: 15vw;
+}
+
 .aComment {
   margin: 2vw;
 }
 
 .comment_Container {
-  margin-left: 20%;
+  margin-left: 25%;
   width: 50%;
   border: 1px black solid;
 }
