--- a/Gifter/client/src/providers/post.css
+++ b/Gifter/client/src/providers/post.css
@@ -3,13 +3,18 @@
   flex-direction: row;
 }
 .form {
-    position: fixed;
-    width: 30%;
+  position: fixed;
+  width: 30%;
 }
 .Post_Scroller {
-    margin-left: 30%;
-    height: 100%;
-    overflow-y: scroll;
+  margin-left: 30%;
+  height: 100%;
+  overflow-y: scroll;
+}
+.searchFields {
+  display: flex;
+  margin-left: 25%;
+  align-items: center;
 }
 .post__Form__Fields {
   margin-left: 25%;
@@ -28,11 +33,12 @@
 
 .submit_Button {
   margin: 2vw;
+  border-radius: 5px;
 }
 
 .post_Card {
-    width: 70%;
-    margin-left: 15vw;
+  width: 70%;
+  margin-left: 15vw;
 }
 
 .aComment {
